fix: remove large gap in action to get consistent aligning

--- a/components/Action/src/index.scss
+++ b/components/Action/src/index.scss
@@ -16,7 +16,6 @@
   @media (width >= 768px) {
     flex-direction: row;
     align-items: center;
-    gap: var(--denhaag-action-lg-gap);
     padding-block-start: var(--denhaag-action-lg-padding-block-start);
     padding-block-end: var(--denhaag-action-lg-padding-block-end);
   }
@@ -30,7 +29,6 @@
     @media (width >= 768px) {
       flex-direction: row;
       align-items: center;
-      gap: var(--denhaag-action-details-lg-gap);
     }
   }
 
@@ -111,10 +109,6 @@
       flex-direction: row;
       justify-content: space-between;
       gap: var(--denhaag-action-single-details-gap);
-
-      @media (width >= 768px) {
-        gap: var(--denhaag-action-single-details-lg-gap);
-      }
     }
   }
 
